# Dark-Web-AI-Scout

./: .env.example  .gitignore  DEVELOPMENT.md  README.md  pyproject.toml
configs/: default.yaml  illegal_patterns.txt
configs/seeds/: initial.txt
src/: __init__.py
src/cli/: main.py  setup.py  test
src/core/: __init__.py  models.py  tor_manager.py
src/storage/: database.py  models.py
src/utils/: config.py  logger.py
